; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wfi_cfgoperations.c_wilc_wfi_cfg_copy_wep_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_wfi_cfgoperations.c_wilc_wfi_cfg_copy_wep_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wilc_priv = type { i32*, i32* }
%struct.key_params = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wilc_priv*, i64, %struct.key_params*)* @wilc_wfi_cfg_copy_wep_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wilc_wfi_cfg_copy_wep_info(%struct.wilc_priv* %0, i64 %1, %struct.key_params* %2) #0 {
  %4 = alloca %struct.wilc_priv*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.key_params*, align 8
  store %struct.wilc_priv* %0, %struct.wilc_priv** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.key_params* %2, %struct.key_params** %6, align 8
  %7 = load %struct.key_params*, %struct.key_params** %6, align 8
  %8 = getelementptr inbounds %struct.key_params, %struct.key_params* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.wilc_priv*, %struct.wilc_priv** %4, align 8
  %11 = getelementptr inbounds %struct.wilc_priv, %struct.wilc_priv* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = load i64, i64* %5, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  store i32 %9, i32* %14, align 4
  %15 = load %struct.wilc_priv*, %struct.wilc_priv** %4, align 8
  %16 = getelementptr inbounds %struct.wilc_priv, %struct.wilc_priv* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load i64, i64* %5, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.key_params*, %struct.key_params** %6, align 8
  %22 = getelementptr inbounds %struct.key_params, %struct.key_params* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.key_params*, %struct.key_params** %6, align 8
  %25 = getelementptr inbounds %struct.key_params, %struct.key_params* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @memcpy(i32 %20, i32 %23, i32 %26)
  ret void
}

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
